# KHPlayer

./: .clang-format  .clangd  .gitignore  .ignore  CMakeLists.txt  Converter.cpp  README.md  TODO.md  build.sh
.helix/: languages.toml
android/: .gitignore  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: ConnectConfig.cpp  Connection.cpp  Connection.h  FileMenu.cpp  FileMenu.h  Parser.cpp  Selector.cpp  Selector.h  TextRenderer.cpp  android_client.cpp
android/app/src/main/java/com/simplevideoplayer/: MainActivity.java
android/app/src/main/res/drawable/: banner.xml
android/app/src/main/res/values/: strings.xml
android/integration-test/: build.gradle
android/integration-test/src/main/: AndroidManifest.xml
android/integration-test/src/main/cpp/: play_container.cpp
android/integration-test/src/main/java/com/simplevideoplayer/integrationtest/: MainActivity.java
android/playback-evaluation/: CMakeLists.txt  main.cpp
client/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  ConnectConfig.cpp  ConnectConfig.h  FileMenu.cpp  MenuRenderer.cpp  MenuRenderer.h  Parser.cpp  Parser.h  Selector.h  TextRenderer.h
common/: logging.h
include/: Converter.h  Decoder.h  Renderer.h  SdlContext.h  VideoContainer.h  VideoPlayer.h
player/: CMakeLists.txt
player/include/: VideoPlayer.h
player/src/: BoundedQueue.h  Converter.cpp  Converter.h  Decoder.cpp  Decoder.h  Renderer.cpp  Renderer.h  SdlContext.cpp  SdlContext.h  VideoContainer.cpp  VideoContainer.h  VideoPlayer.cpp  utility.h
player/tests/: CMakeLists.txt
scripts/: android-test.sh  deploy-android.sh  deploy-integration.py  setup-android-deps.sh  setup-desktop-deps.sh  test_server.sh
server/: CMakeLists.txt  main.cpp
server/include/: VideoServer.h
server/src/: Directory.cpp  Directory.h  ErrorResponse.cpp  ErrorResponse.h  FileListHttpResponse.cpp  FileListHttpResponse.h  FileStream.cpp  FileStream.h  HttpConnection.cpp  HttpConnection.h  HttpRequest.cpp  HttpRequest.h  VideoReadyHttpResponse.cpp  VideoReadyHttpResponse.h  VideoServer.cpp
src/: Converter.cpp  Decoder.cpp  Renderer.cpp  SdlContext.cpp  VideoContainer.cpp  VideoPlayer.cpp  client_main.cpp  main.cpp  server_main.cpp  utility.cpp  utility.h
